@@ -73,11 +73,11 @@ sub _setup_and_start_X {
 
     my @servers = qw(Driver:auto Driver:fbdev Driver:vesa Driver:modesetting ); #-)
     if ($::testing) {
-        @servers = 'Xephyr';
-    } elsif (arch() =~ /ia64/) {
+        @servers = 'Xnest';
+    } elsif ( is_uefi() ) {
         require Xconfig::card;
         my ($card) = Xconfig::card::probe();
-        @servers = map { if_($_, "Driver:$_") } $card && $card->{Driver}, 'fbdev';
+        @servers = 'Driver:fbdev';
     } elsif (arch() =~ /i.86/) {
         require Xconfig::card;
         my ($card) = Xconfig::card::probe();
