@@ -1,6 +1,7 @@
 - default to GPT on disks larger than 4TB, not LVM
 - fix GPT initialization on empty disk
 - fix failure to delete partitions after switching to GPT
+- fix stage2 loading graphical installer in efi mode
 
 Version 16.51 - 3 February 2015
 
